-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: internal
-
Component/s: client-libs
-
generic
-
os_x
After JDK-8247304 we have improved out Swingmark numbers greatly but still numbers are not good in case of Nimbus LAF.
Metal:
Startup Time: 1460
Sub-Menus = 6506 (Paint = 0)
TextArea = 2832 (Paint = 602)
Sliders = 1798 (Paint = 502)
Lists = 838 (Paint = 493)
Table Rows = 1044 (Paint = 212)
Tree = 5931 (Paint = 813)
Score: 20658
OpenGL :
Startup Time: 1220
Sub-Menus = 3858 (Paint = 0)
TextArea = 1930 (Paint = 602)
Sliders = 2863 (Paint = 502)
Lists = 1518 (Paint = 493)
Table Rows = 1265 (Paint = 212)
Tree = 3486 (Paint = 813)
Score: 16347
Metal:
Startup Time: 1460
Sub-Menus = 6506 (Paint = 0)
TextArea = 2832 (Paint = 602)
Sliders = 1798 (Paint = 502)
Lists = 838 (Paint = 493)
Table Rows = 1044 (Paint = 212)
Tree = 5931 (Paint = 813)
Score: 20658
OpenGL :
Startup Time: 1220
Sub-Menus = 3858 (Paint = 0)
TextArea = 1930 (Paint = 602)
Sliders = 2863 (Paint = 502)
Lists = 1518 (Paint = 493)
Table Rows = 1265 (Paint = 212)
Tree = 3486 (Paint = 813)
Score: 16347
- relates to
-
JDK-8247304 Use separate MTLCommandQueue for final blit and MTLDrawable present
-
- Resolved
-
- links to
-
Commit
openjdk/lanai/ced20587