8248129: Swingmark numbers are not good for Nimbus LAF 8255212: J2DDemo : Rectangle in Texture paint disappears if we enable AA